# rosalind

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  justfile  pyproject.toml
.github/: ISSUE_TEMPLATE.md
docs/: index.md  installation.md  usage.md
src/rosalind_problems/scripts/: get_problem.py
src/rosalind_problems/templates/: main.py  test.py
src/rosalind_problems/utils/: annotations.py  cli.py  get.py  run.py  static.py  testing_utils.py
tests/fixtures/: main.py  main.txt  mock_problem.html  mock_test.py  problem.md  test.txt
tests/test_scripts/: test_get_problem.py
tests/test_utils/: test_get.py  test_run.py
